# agente-de-viagem

./: README.md
backend/: Dockerfile  README.md  pyproject.toml  render.yaml
backend/app/: main.py  models.py
backend/app/core/: checklist.py  climate.py  time_to_leave.py
backend/app/io/: airports_db.py  export.py  geocode.py
consultor-ui/: package.json
consultor-ui/app/: globals.css  layout.tsx  page.tsx
consultor_viagens/: airports_db.py  checklist.py  climate.py  flight.py  requirements_windows_no_compile.txt  routing.py
consultor_viagens/api/app/: main.py
web/: README.md  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
