
[project]
name = "consultor-viagens-api"
version = "0.1.0"
description = "Consultor de Viagens (FastAPI)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "meteostat>=1.6.7",
    "geopy>=2.4.1",
    "pandas>=2.2.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
